# gwtr

./: CLAUDE.md  CRATES_PUBLISHING.md  Cargo.toml  README.md
.github/workflows/: cargo-publish.yml  npm-publish.yml
npm/: .gitignore  PUBLISHING.md  README.md  package.json  test-local.sh
npm/lib/: postinstall.js
src/: lib.rs  main.rs
tests/: list_command.rs  prune_command.rs  pull_command.rs  remove_command.rs  status_command.rs  switch_command.rs  worktree_creation.rs
tests/common/: mod.rs
