[package]
name = "gwtr"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A simple Git worktree manager"
license = "MIT"
repository = "https://github.com/yourusername/gwtr"
readme = "README.md"
keywords = ["git", "worktree", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "gwtr"
path = "src/lib.rs"

[[bin]]
name = "gwtr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
anyhow = "1.0"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.13"
